--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64dp">
+                android:layout_marginTop="16dp">
 
                 <ImageView
                     android:id="@+id/profilepic"
@@ -48,6 +48,19 @@
                     android:id="@+id/placeProfile"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="2dp"/>
+
+                <ImageButton
+                    android:id="@+id/languageProfile"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:tint="#15135B"
+                    android:background="@color/colorBG"
+                    android:backgroundTint="@color/colorBG"
+                    android:contentDescription="@string/imageDescription"
+                    android:src="@android:drawable/ic_btn_speak_now"/>
 
 
             </RelativeLayout>
